k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
  labels:
    app: personal-site
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: personal-site
  sessionAffinity: None
